# pluto-build-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  patch.ps1
Pluto-0.10.4/: Pluto.sln  Pluto.vcxproj  Pluto.vcxproj.filters
Pluto-0.10.4/scripts/: bundle_nupkg.php  common.php  compile.php  link_pluto.php  link_plutoc.php  link_shared.php  link_static.php  make_dll.php  wasm.php
Pluto-0.10.4/src/: .sun  dynamic.sun  lauxlib.cpp  lbaselib.cpp  lerrormessage.hpp  lffi.cpp  lhttplib.cpp  liolib.cpp  ljson.hpp  loadlib.cpp  pluto.sun
Pluto-0.10.4/testes/bench/: primes.lua
patches/: hook_c_abi.patch  libwrapper.cpp  libwrapper.hpp
pluto-ffi/: Cargo.toml
pluto-ffi/src/: lib.rs
src/: lib.rs  options.rs
testcrate/: Cargo.toml  build.rs
testcrate/src/: lib.rs
