[package]
name = "pluto-build"
version = "0.1.0-0.10.4"
edition = "2021"
authors = ["Sculas <contact@sculas.xyz>"]
repository = "https://github.com/Sculas/pluto-build-rs"
keywords = ["lua", "pluto"]
readme = "README.md"
license = "MIT"
description = "A Rust library for compiling and linking Pluto into your Rust project."

[workspace]
members = ["testcrate"]

[dependencies]
cc = { version = "1.2", features = ["parallel"] }
